main | bedroom_01 added children heater

--- a/ui_lovelace_minimalist/dashboard/views/room/bedroom-01.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/room/bedroom-01.yaml
@@ -34,6 +34,13 @@ cards:
           ulm_card_cover_enable_slider: true
           ulm_card_cver_favorite_percentage: 45
           ulm_card_cover_color: yellow
+      - type: "custom:button-card"
+        template: card_power_outlet
+        entity: !secret bedroom_01_children_heater
+        variables:
+          ulm_card_power_outlet_name: Children Heater
+          ulm_card_power_outlet_icon: mdi:power
+          ulm_card_power_outlet_force_background_color: true
 
       - type: horizontal-stack
         cards:
@@ -51,3 +58,4 @@ cards:
               ulm_card_light_name: !secret dad_name
               ulm_card_light_enable_color: true
               ulm_card_light_force_background_color: true
+
