--- a/configuration.yaml
+++ b/configuration.yaml
@@ -39,16 +39,17 @@ lovelace:
 frontend:
   themes: !include_dir_merge_named themes
 
+automation: !include automations.yaml
+climate: !include climate.yaml
+group: !include groups.yaml
+lock: !include lock.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
-climate: !include climate.yaml
-lock: !include lock.yaml
-group: !include groups.yaml
+template: !include sensors.yaml
 
 smartir:
   check_updates: false
 
-automation: !include automations.yaml
 automation wake_up_screen:
   - alias: Wake up screenblet on motion
     description: Wake up the device screen when motion is detected
