--- a/ui_lovelace_minimalist/dashboard/views/home-01.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home-01.yaml
@@ -68,12 +68,13 @@ cards:
               - entity.attributes.battery_state
               - !secret sensor_main_door
           - type: "custom:button-card"
-            template: card_power_outlet
+            template: card_power_outlet_heater
             entity: !secret water_heater
             variables:
               ulm_card_power_outlet_name: Water Heater
               ulm_card_power_outlet_icon: mdi:power
               ulm_card_power_outlet_force_background_color: true
+              ulm_card_power_outlet_consumption_sensor: sensor.water_heater_last_on
       # card_title rooms #
       - type: "custom:button-card"
         template: card_title
