--- a/ui_lovelace_minimalist/dashboard/views_dev/room/livingroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/room/livingroom.yaml
@@ -58,12 +58,9 @@ cards:
               ulm_card_light_enable_color: true
               ulm_card_light_force_background_color: true
 
-          - type: "custom:button-card"
-            template: card_media_player
+          - type: custom:button-card
+            template: card_button_navigate
             entity: !secret tv_livingroom
             variables:
-              ulm_card_media_player_name: TV
-              ulm_card_media_player_enable_volume_buttons: true
-              ulm_card_media_player_power_button: true
-              ulm_card_media_player_collapsible: true
-              ulm_card_media_player_color: yellow
+              ulm_card_button_navigate_name: TV
+              ulm_card_button_navigate_path: tv-samsung
