--- a/ui_lovelace_minimalist/dashboard/views/home-tablet.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home-tablet.yaml
@@ -39,7 +39,7 @@ cards:
         variables:
           ulm_custom_card_camera_title: true
           ulm_custom_card_camera_name: "Front Door"
-          ulm_custom_card_camera_aspect_ratio: '16:9'
+          ulm_custom_card_camera_aspect_ratio: "16:9"
     view_layout:
       grid-area: left
   - type: vertical-stack
@@ -130,7 +130,15 @@ cards:
               ulm_custom_card_esh_room_climate_entity: climate.ac_main
               ulm_custom_card_esh_room_cover_entity: group.rollers_livingroom
               temperature_entity: !secret bathroom_temperature
-            label: "🌡️ LabelToAdd"
+            label: |
+              [[[ 
+                var target = states['climate.ac_main'];
+                var temperature = target.attributes.current_temperature;
+                if (temperature == null) {
+                  var temperature = '-';
+                }
+                return "🌡️ " + temperature + hass.config.unit_system.temperature;
+              ]]]
       # card_esh_room laly & guest #
       - type: horizontal-stack
         cards:
@@ -138,7 +146,7 @@ cards:
             template:
               - card_esh_room_dev
               - yellow_on
-            name: Bedroom
+            name: Laly
             icon: mdi:bed
             tap_action:
               action: navigate
@@ -146,12 +154,20 @@ cards:
             variables:
               ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_03
               ulm_custom_card_esh_room_climate_entity: climate.ac_bedroom_02
-            label: "Laly"
+            label: |
+              [[[ 
+                var target = states['climate.ac_bedroom_02'];
+                var temperature = target.attributes.current_temperature;
+                if (temperature == null) {
+                  var temperature = '-';
+                }
+                return "🌡️ " + temperature + hass.config.unit_system.temperature;
+              ]]]
           - type: "custom:button-card"
             template:
               - card_esh_room_dev
               - yellow_on
-            name: Bedroom
+            name: Guest
             icon: mdi:bed
             tap_action:
               action: navigate
@@ -159,7 +175,15 @@ cards:
             variables:
               ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_04
               ulm_custom_card_esh_room_climate_entity: climate.ac_guest
-            label: "Guest"
+            label: |
+              [[[ 
+                var target = states['climate.ac_guest'];
+                var temperature = target.attributes.current_temperature;
+                if (temperature == null) {
+                  var temperature = '-';
+                }
+                return "🌡️ " + temperature + hass.config.unit_system.temperature;
+              ]]]
       # card_esh_room bedroom main & office #
       - type: horizontal-stack
         cards:
@@ -188,6 +212,14 @@ cards:
             variables:
               ulm_custom_card_esh_room_climate_entity: climate.ac_office
               ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_05
-            label: "YK"
+            label: |
+              [[[ 
+                var target = states['climate.ac_office'];
+                var temperature = target.attributes.current_temperature;
+                if (temperature == null) {
+                  var temperature = '-';
+                }
+                return "🌡️ " + temperature + hass.config.unit_system.temperature;
+              ]]]
     view_layout:
       grid-area: right
