--- a/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
@@ -136,7 +136,14 @@ cards:
               ulm_custom_card_esh_room_climate_entity: climate.ac_main
               ulm_custom_card_esh_room_cover_entity: group.rollers_livingroom
             label: |
-              "🌡️ " climate.ac_main
+              [[[ 
+                var target = states['climate.ac_main'];
+                var temperature = target.attributes.current_temperature;
+                if (temperature == null) {
+                  var temperature = '-';
+                }
+                return "🌡️ " + temperature + hass.config.unit_system.temperature;
+              ]]]
         # card_esh_room laly & guest #
       - type: horizontal-stack
         cards:
