--- a/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
@@ -158,8 +158,16 @@ cards:
               navigation_path: bedroom-03
             variables:
               ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_03
-              ulm_custom_card_esh_room_climate_entity: climate.ac_bedroom_02
-            label: "Laly"
+              ulm_custom_card_esh_room_climate_entity: !secret ac_bedroom_03_entity
+            label: |
+              [[[ 
+                var target = states['climate.ac_laly'];
+                var temperature = target.attributes.current_temperature;
+                if (temperature == null) {
+                  var temperature = '-';
+                }
+                return "🌡️ " + temperature + hass.config.unit_system.temperature;
+              ]]]
           - type: "custom:button-card"
             template:
               - card_esh_room_dev
