--- a/ui_lovelace_minimalist/dashboard/ui-lovelace-dev.yaml
+++ b/ui_lovelace_minimalist/dashboard/ui-lovelace-dev.yaml
@@ -13,3 +13,4 @@ views:
   - !include views_dev/room/bedroom-05.yaml
   - !include views_dev/room/livingroom.yaml
   - !include views_dev/media/tv-samsung.yaml
+  - !include views_dev/media/tv-android.yaml
